--- a/fontend/package.json
+++ b/fontend/package.json
@@ -57,6 +57,7 @@
     "helmet": "latest",
     "input-otp": "1.4.1",
     "jsonwebtoken": "latest",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.454.0",
     "mongoose": "latest",
     "multer": "latest",
